--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GreenWise</title>
-    <link rel="icon" href="img/eco.png">
+    <link rel="icon" href="eco.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
